Added changelog management over admin routes
