# GameOn.Application/Common/Changelogs/Commands/UpdateChangelog/UpdateChangelogCommandHandler.cs
@@ -1,48 +1,54 @@
-﻿// <copyright file="CreateChangelogCommandHandler.cs" company="LeadOn's Corp'">
+﻿// <copyright file="UpdateChangelogCommandHandler.cs" company="LeadOn's Corp'">
 // Copyright (c) LeadOn's Corp'. All rights reserved.
 // </copyright>
 
-namespace GameOn.Application.Common.Changelogs.Commands.CreateChangelog
+using AutoMapper;
+using Microsoft.EntityFrameworkCore;
+
+namespace GameOn.Application.Common.Changelogs.Commands.UpdateChangelog
 {
     using GameOn.Common.Interfaces;
     using GameOn.Domain;
     using MediatR;
 
     /// <summary>
-    /// CreateChangelogCommandHandler class.
+    /// UpdateChangelogCommandHandler class.
     /// </summary>
-    public class CreateChangelogCommandHandler : IRequestHandler<CreateChangelogCommand, Changelog>
+    public class UpdateChangelogCommandHandler : IRequestHandler<UpdateChangelogCommand, Changelog>
     {
         private readonly IApplicationDbContext context;
 
         /// <summary>
-        /// Initializes a new instance of the <see cref="CreateChangelogCommandHandler"/> class.
+        /// Initializes a new instance of the <see cref="UpdateChangelogCommandHandler"/> class.
         /// </summary>
         /// <param name="context">DbContext, injected.</param>
-        public CreateChangelogCommandHandler(IApplicationDbContext context)
+        public UpdateChangelogCommandHandler(IApplicationDbContext context)
         {
             this.context = context;
         }
 
         /// <inheritdoc />
-        public async Task<Changelog> Handle(CreateChangelogCommand request, CancellationToken cancellationToken)
+        public async Task<Changelog> Handle(UpdateChangelogCommand request, CancellationToken cancellationToken)
         {
-            var newChangelog = new Changelog
-            {
-                Version = request.Changelog.Version,
-                Type = request.Changelog.Type,
-                UpdatedFeatures = request.Changelog.UpdatedFeatures,
-                RemovedFeatures = request.Changelog.RemovedFeatures,
-                NewFeatures = request.Changelog.NewFeatures,
-                Context = request.Changelog.Context,
-                PublicationDate = DateTime.Now,
-                Published = request.Changelog.Published,
-                Name = request.Changelog.Name,
-            };
+            var changelogInDb = await this.context.Changelogs.FirstOrDefaultAsync(x => x.Id == request.Changelog.Id, cancellationToken);
 
-            this.context.Changelogs.Add(newChangelog);
+            if (changelogInDb == null)
+            {
+                throw new NotImplementedException();
+            }
+
+            changelogInDb.Published = request.Changelog.Published;
+            changelogInDb.Name = request.Changelog.Name;
+            changelogInDb.Context = request.Changelog.Context;
+            changelogInDb.Version = request.Changelog.Version;
+            changelogInDb.Type = request.Changelog.Type;
+            changelogInDb.NewFeatures = request.Changelog.NewFeatures;
+            changelogInDb.RemovedFeatures = request.Changelog.RemovedFeatures;
+            changelogInDb.UpdatedFeatures = request.Changelog.UpdatedFeatures;
+
+            this.context.Changelogs.Update(changelogInDb);
             await this.context.SaveChangesAsync(cancellationToken);
-            return newChangelog;
+            return request.Changelog;
         }
     }
 }
