# GameOn.Application/Common/Changelogs/Queries/GetLatestChangelog/GetLatestChangelogQueryHandler.cs
@@ -1,8 +1,8 @@
-﻿// <copyright file="GetAllChangelogQueryHandler.cs" company="LeadOn's Corp'">
+﻿// <copyright file="GetLatestChangelogQueryHandler.cs" company="LeadOn's Corp'">
 // Copyright (c) LeadOn's Corp'. All rights reserved.
 // </copyright>
 
-namespace GameOn.Application.Common.Changelogs.Queries.GetAllChangelogs
+namespace GameOn.Application.Common.Changelogs.Queries.GetLatestChangelog
 {
     using GameOn.Common.Interfaces;
     using GameOn.Domain;
@@ -10,25 +10,25 @@ namespace GameOn.Application.Common.Changelogs.Queries.GetAllChangelogs
     using Microsoft.EntityFrameworkCore;
 
     /// <summary>
-    /// GetAllChangelogQueryHandler class.
+    /// GetLatestChangelogQueryHandler class.
     /// </summary>
-    public class GetAllChangelogQueryHandler : IRequestHandler<GetAllChangelogQuery, IEnumerable<Changelog>>
+    public class GetLatestChangelogQueryHandler : IRequestHandler<GetLatestChangelogQuery, Changelog>
     {
         private readonly IApplicationDbContext context;
 
         /// <summary>
-        /// Initializes a new instance of the <see cref="GetAllChangelogQueryHandler"/> class.
+        /// Initializes a new instance of the <see cref="GetLatestChangelogQueryHandler"/> class.
         /// </summary>
         /// <param name="context">DbContext, injected.</param>
-        public GetAllChangelogQueryHandler(IApplicationDbContext context)
+        public GetLatestChangelogQueryHandler(IApplicationDbContext context)
         {
             this.context = context;
         }
 
         /// <inheritdoc />
-        public async Task<IEnumerable<Changelog>> Handle(GetAllChangelogQuery request, CancellationToken cancellationToken)
+        public async Task<Changelog> Handle(GetLatestChangelogQuery request, CancellationToken cancellationToken)
         {
-            return await this.context.Changelogs.OrderByDescending(x => x.PublicationDate).ToListAsync(cancellationToken);
+            return await this.context.Changelogs.Where(x => x.Published == true).OrderByDescending(x => x.PublicationDate).FirstAsync(cancellationToken);
         }
     }
 }
