# GameOn.Common/DTOs/CreateChangelogDto.cs
@@ -1,4 +1,4 @@
-﻿// <copyright file="CreateSoccerFiveDto.cs" company="LeadOn's Corp'">
+﻿// <copyright file="CreateChangelogDto.cs" company="LeadOn's Corp'">
 // Copyright (c) LeadOn's Corp'. All rights reserved.
 // </copyright>
 
@@ -7,30 +7,55 @@ namespace GameOn.Common.DTOs
     using GameOn.Domain;
 
     /// <summary>
-    /// CreateSoccerFiveDto class.
+    /// CreateChangelogDto class.
     /// </summary>
-    public class CreateSoccerFiveDto
+    public class CreateChangelogDto
     {
         /// <summary>
-        /// Initializes a new instance of the <see cref="CreateSoccerFiveDto"/> class.
+        /// Initializes a new instance of the <see cref="CreateChangelogDto"/> class.
         /// </summary>
-        public CreateSoccerFiveDto()
+        public CreateChangelogDto()
         {
         }
 
         /// <summary>
-        /// Gets or sets Name.
+        /// Gets or sets name.
         /// </summary>
         public string? Name { get; set; }
 
         /// <summary>
-        /// Gets or sets Description.
+        /// Gets or sets Type.
         /// </summary>
-        public string? Description { get; set; }
+        public int Type { get; set; }
 
         /// <summary>
-        /// Gets or sets PlannedOn.
+        /// Gets or sets a value indicating whether changelog is published or not.
         /// </summary>
-        public DateTime? PlannedOn { get; set; }
+        public bool Published { get; set; }
+
+        /// <summary>
+        /// Gets or sets version.
+        /// </summary>
+        public string Version { get; set; } = string.Empty;
+
+        /// <summary>
+        /// Gets or sets context.
+        /// </summary>
+        public string? Context { get; set; }
+
+        /// <summary>
+        /// Gets or sets new features.
+        /// </summary>
+        public List<string>? NewFeatures { get; set; }
+
+        /// <summary>
+        /// Gets or sets updated features.
+        /// </summary>
+        public List<string>? UpdatedFeatures { get; set; }
+
+        /// <summary>
+        /// Gets or sets removed features.
+        /// </summary>
+        public List<string>? RemovedFeatures { get; set; }
     }
 }
